fix - svg bug
scrollbar gutted now targeting html instead of all elements. targeting
the svgs made them disappear and also shifted contents position.

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,7 +67,7 @@
 	--rule: #242424;
 }
 
-* {
+html {
 	scrollbar-gutter: stable;
 }
 
